<resources>
    <string name="app_name">Fashion Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_your_product">Find your Product</string>
    <string name="img">img</string>
    <string name="catigories">Catigories</string>
    <string name="last_product">Last Product</string>
    <string name="see_all">See all</string>
    <string name="_0">0</string>
    <string name="best_saller">Best saller</string>
    <string name="offers">Offers</string>
    <string name="log_in">Log In</string>
    <string name="welcome_in_fashion_shop">Welcome to Fashion Shop</string>
    <string name="dont_have_email_register">dont have email ? register</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="my_account">My Account</string>
    <string name="payment_method">Payment Method</string>
    <string name="setting">Setting</string>
    <string name="size_avilabel">Size Avilabel</string>
    <string name="color_avilable">Color Avilable</string>
    <string name="description">Description</string>
    <string name="add_to_card">Add To Card</string>
    <string name="register">Register</string>
    <string name="search_product">Search Product</string>
    <string name="chose_color">Chose Color</string>
    <string name="chose_size">Chose Size</string>
    <string name="complete">Complete</string>
    <string name="total_price">Total Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="payment">Payment</string>
    <string name="_867">***867</string>
    <string name="cradit_card">Cradit card</string>
    <string name="cheak_out">Cheak Out</string>
    <string name="order_price">order price</string>
    <string name="log_out">Log Out</string>
    <string name="notification">Notification</string>
    <string name="no_fav_found">No Fav Found</string>
    <string name="my_fav">My Fav</string>
    <string name="account">Account</string>
    <string name="note">Note</string>
    <string name="my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="payment_methoud">Payment Methoud</string>
    <string name="cart_id">Cart Id</string>
    <string name="cvv2">CVV2</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="set_methoud">Set Methoud</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_your_email_and_after_5_15_secound_you_will_recive_verification_link_to_reset_your_password">enter your email and after 5-15 secound you will recive verification link to reset your password</string>
    <string name="product_by_catigory">Product By Catigory</string>
    <string name="no_product_found">No Product found</string>
    <string name="search">Search</string>
    <string name="cheak_location">Cheak Location</string>
    <string name="full_name">Full Name</string>
    <string name="name_or_num_of_building">Name or Num of Building</string>
    <string name="floor_number">Floor Number</string>
    <string name="famous_marker">Famous Marker</string>
    <string name="place">Place</string>
    <string name="phone_number">Phone Number</string>
    <string name="any_note">Any Note</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="order_info">Order Info</string>
    <string name="location">Location</string>
    <string name="success">Success</string>
    <string name="info_for_ordering">Info For Ordering</string>
    <string name="orders">Orders</string>
    <string name="type">Type</string>
    <string name="catigores">Catigores</string>
    <string name="settig">Setteing</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="arabic_languashe">Arabic Languashe</string>
    <string name="last">Last</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="first_name">First name</string>
    <string name="last_name">last Name</string>

</resources>