<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.body.MainBodyFragment"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibtn_notifi_mainfrag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_notification"
            app:tint="@color/icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/img" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search_mainfrag"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/mygray"
            android:gravity="start|center"
            android:inputType="text"
            android:text="@string/find_your_product"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_8sdp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_search"
            app:iconTint="@color/darkgray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView"
            app:layout_constraintStart_toEndOf="@+id/ibtn_notifi_mainfrag"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_myorders_mainfrag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@drawable/back_img_user_mainfrag"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_orders"
                app:tint="@color/icons"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textVietw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/offers"
                android:textColor="@color/text1"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/img_mainfrag_slideroffers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:textAlignment="center"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_error_image="@drawable/error"
                app:iss_period="1000" />

            <LinearLayout
                android:id="@+id/dots_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/catigories"
                android:textColor="@color/text1"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/recy_catigory_mainfrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_recycler_layout="@layout/layout_shimmer_catigory"
                app:shimmer_recycler_item_count="4"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_weight="2"
                    android:text="@string/best_saller"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/see_all"
                    android:textColor="@color/darkgray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/recy_bestsallerProd"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginBottom="16dp"
                app:shimmer_recycler_item_count="3"
                app:shimmer_recycler_layout="@layout/layout_shimmer_product" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>