<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.body.MyCartFragment"
    android:background="@color/background">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/text1"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_buynow_mycart"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/myred"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/buy_now"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_totalprice_mycart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="24dp"
                android:text="$ 299"
                android:textColor="@color/text1"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/total_price"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_totalprice_mycart"
                app:layout_constraintStart_toStartOf="@+id/tv_totalprice_mycart" />

            <ProgressBar
                android:id="@+id/pr_payments_mycart"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="8dp"
                android:elevation="2dp"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="@+id/btn_buynow_mycart"
                app:layout_constraintStart_toStartOf="@+id/btn_buynow_mycart"
                app:layout_constraintTop_toTopOf="@+id/btn_buynow_mycart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textColor="@color/text1"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_mycart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toEndOf="@+id/btn_back_mycart"
        app:layout_constraintTop_toTopOf="@+id/btn_back_mycart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_mycart"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@color/back_back_btn"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_back"
        app:iconTint="@color/icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />



    <ImageView
        android:id="@+id/img_error_mycart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_noitem"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:tint="@color/darkgray" />

    <TextView
        android:id="@+id/tv_error_mycart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_fav_found"
        android:textColor="@color/darkgray"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/img_error_mycart"
        app:layout_constraintStart_toStartOf="@+id/img_error_mycart"
        app:layout_constraintTop_toBottomOf="@+id/img_error_mycart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy_order_mycart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_mycart"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>